--- a/user_guide/changelog.html
+++ b/user_guide/changelog.html
@@ -3431,7 +3431,7 @@ Processing</span></a> library.</li>
 <li>Changed the behaviour of custom callbacks so that they no longer
 trigger the “required” rule.</li>
 <li>Modified Upload class $_FILES error messages to be more precise.</li>
-<li>Moved the safe mode and auth checks for the Email library into the
+<li>Moved the safe mode and Auths checks for the Email library into the
 constructor.</li>
 <li>Modified variable names in _ci_load() method of Loader class to
 avoid conflicts with view variables.</li>
